Move to Java 8. Fixes #5
Also change the base64 decoder since the previously used class is not longer
visible in Java 8.